<resources>
    <string name="app_name">WE CARE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="username">User Name</string>
    <string name="signupmessage">Not signed up ? Click here.</string>
    <string name="actionmonitortext">Monitor that text for changes</string>
    <string name="log_in_button">Log in</string>
    <string name="user_hint">Enter user name</string>
    <string name="password_hint">Enter password</string>
    <string name="testcase1">The sign in button is clicked</string>
    <string name="testcase2">The sign up text is clicked</string>
    <string name="number_hint">Enter your phone number</string>
    <string name="date_hint">Enter your date of birth</string>
    <string name="doctor_hint">Enter your doctor ID</string>
    <string name="sign_up">Sign up</string>
    <string name="signinmessage">Already signed up? Sign in</string>
    <string name="date">DATE</string>
    <string name="radioP">Patient</string>
    <string name="radioD">Doctor</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="Welcome_message">Please notify your doctor with your accout details so we can take care of you at the best possible way</string>
    <string name="welcome1">Welcome</string>
    <string name="Welcome2">To WE CARE</string>
    <string name="SkipRegestirationText">Click here to skip registeration(TESTING FEATURE)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Measurments_text">Patient measurements</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aboutus">Welcome to WE CARE.\n WE CARE is a project made by students from Cairo university faculty of engineering, electric communications and electronics department students.\n The project aims to benefit both the doctors and the patients. By providing regular monitoring to the patient condition, help the patient contact his doctor easily, remind him of his medication at the right time and provide a strong database for the patient condition
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_hmaps">Map</string>
    <string name="title_activity_locations">Map</string>
    <string name="settings_desc">By default the app will call the doctor in dangerous state 1 and call for an ambulance in dangerous state 2 and pressing the emergency button in the app or the medical kit
    \n Use this page to modify the numbers if you want
    </string>
    <string name="state1">Dangerous STATE 1: 5 consecutive dangerous readings</string>
    <string name="state2">Dangerous STATE 2: 10 consecutive dangerous readings</string>
    <string name="state3">Default emerency action is to call for an ambulance</string>
    <string name="email_header">If you have any questions feel free to send your questions via e-mail</string>


</resources>
