<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#E25C36"
    tools:context="com.gp.eece2019.wecare.login.SignupActivity">

    <EditText
        android:id="@+id/username1"
        android:layout_width="290dp"
        android:layout_height="36dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:background="#A04568"
        android:ems="10"
        android:hint="@string/user_hint"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname"
        android:layout_marginLeft="35dp" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="290dp"
        android:layout_height="36dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:background="#A04568"
        android:textColor="@android:color/background_light"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username1"
        android:layout_marginLeft="35dp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="290dp"
        android:layout_height="36dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:background="#A04568"
        android:textColor="@android:color/background_light"
        android:ems="10"
        android:hint="@string/number_hint"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1"
        android:layout_marginLeft="35dp" />

    <EditText
        android:id="@+id/date"
        android:layout_width="221dp"
        android:layout_height="36dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:background="#A04568"
        android:textColor="@android:color/background_light"
        android:ems="10"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/date_hint"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        android:layout_marginLeft="35dp" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:layout_marginLeft="136dp" />

    <TextView
        android:id="@+id/signintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginTop="22dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/signinmessage"
        android:textColor="#A04568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupbutton"
        android:layout_marginLeft="111dp" />

    <Button
        android:id="@+id/datepicker"
        android:layout_width="68dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="18dp"
        android:text="@string/date"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        android:layout_marginLeft="1dp" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="137dp"
        android:layout_height="36dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="70dp"
        android:background="#A04568"
        android:textColor="@android:color/background_light"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="35dp" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="137dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:background="#A04568"
        android:textColor="@android:color/background_light"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/firstname"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginLeft="16dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="20dp"
        android:checkedButton="@+id/radioP"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datepicker"
        android:layout_marginLeft="108dp">

        <RadioButton
            android:id="@+id/radioD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Radioclick"
            android:text="@string/radioD" />

        <RadioButton
            android:id="@+id/radioP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Radioclick"
            android:text="@string/radioP" />
    </RadioGroup>

    <TextView
        android:id="@+id/skipregisterationtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/SkipRegestirationText"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signintext"
        android:layout_marginLeft="34dp" />

</android.support.constraint.ConstraintLayout>