<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AD4C5F"
    tools:context="com.gp.eece2019.wecare.login.SigninActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="290dp"
        android:layout_height="36dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="130dp"
        android:background="#D24D3C"
        android:ems="10"
        android:hint="@string/user_hint"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="35dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="290dp"
        android:layout_height="36dp"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="28dp"
        android:textColor="@android:color/background_light"
        android:background="#D24D3C"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="135dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="35dp"
        android:text="@string/log_in_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/signuptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/signupmessage"
        android:textColor="#D24D3C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />



</android.support.constraint.ConstraintLayout>