<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".staticfragments.Settings">

    <!-- TODO: Update blank fragment layout -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:background="#FFCDF7EB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/Settings_desc"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:gravity="center"
            android:text="@string/settings_desc"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="140dp"
            android:text="DANGEROUS STATE 1:"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/state1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="165dp"
            android:text="@string/state1"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/ph1"
            android:layout_width="258dp"
            android:layout_height="38dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="200dp"
            android:background="#FFBCF8AF"
            android:ems="10"
            android:inputType="phone" />

        <Button
            android:id="@+id/e1"
            android:layout_width="44dp"
            android:layout_height="36dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/ic_edit_black_24dp" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="260dp"
            android:text="DANGEROUS STATE 2:"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/state2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="290dp"
            android:text="@string/state2"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/ph2"
            android:layout_width="258dp"
            android:layout_height="38dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="325dp"
            android:background="#FFBCF8AF"
            android:ems="10"
            android:inputType="phone" />

        <Button
            android:id="@+id/e2"
            android:layout_width="44dp"
            android:layout_height="36dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="325dp"
            android:background="@drawable/ic_edit_black_24dp" />

        <TextView
            android:id="@+id/title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="380dp"
            android:text="Emergency Buttons"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/state3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="410dp"
            android:text="@string/state3"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/ph3"
            android:layout_width="258dp"
            android:layout_height="38dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="450dp"
            android:background="#FFBCF8AF"
            android:ems="10"
            android:inputType="phone" />

        <Button
            android:id="@+id/e3"
            android:layout_width="44dp"
            android:layout_height="36dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="450dp"
            android:background="@drawable/ic_edit_black_24dp" />


    </FrameLayout>
</android.support.constraint.ConstraintLayout>